--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ template {
   font-family: 'Inter';
   font-style:  normal;
   font-weight: 400;
-  src: url("/fonts/Inter-Regular.woff2") format("woff2");
+  src: url(./vendor/Inter-Regular.woff2) format("woff2");
 }
 
 
@@ -360,7 +360,7 @@ template {
   font-family: 'Inter';
   font-style:  normal;
   font-weight: 900;
-  src: url("/fonts/Inter-Black.woff2") format("woff2");
+  src: url(./vendor/Inter-Black.woff2) format("woff2");
 }
 
 .root__section {
@@ -397,6 +397,7 @@ template {
 }
 
 .logo {
+  background: transparent url(./images/logo.svg) no-repeat center;
   width: 148px;
 }
 
@@ -534,7 +535,7 @@ template {
   cursor: pointer;
 }
 .place-card__delete-icon {
-  background: transparent url(/../../../images/trash-icon.svg) no-repeat center;
+  background: transparent url(./images/trash-icon.svg) no-repeat center;
   border: none;
   width: 18px;
   height: 20px;
@@ -561,7 +562,7 @@ template {
 }
 
 .place-card__like-icon {
-  background: transparent url(/../../../images/like-inactive.svg) no-repeat center;
+  background: transparent url(./images/like-inactive.svg) no-repeat center;
   border: none;
   width: 21px;
   height: 19px;
@@ -570,7 +571,7 @@ template {
 }
 
 .place-card__like-icon_liked {
-  background-image: url(/../../../images/like-active.svg);
+  background-image: url(./images/like-active.svg);
 }
 
 .place-card__like-icon:hover {
@@ -601,6 +602,7 @@ template {
 }
 
 .popup__close {
+  background: transparent url(./images/close.svg) no-repeat center;
   width: 26px;
   position: absolute;
   top: -26px;
